- force `box-sizing: border-box;` in Firefox 1 through 28. Fixes "red boob" and other layout bugs.

--- a/plugins/nodebb-plugin-tdwtf-customizations/custom.less
+++ b/plugins/nodebb-plugin-tdwtf-customizations/custom.less
@@ -618,3 +618,8 @@ a[itemprop="url"][href] {
 		height: 100%;
 	}
 }
+
+/* Force border-box in Firefox 1-28. You're welcome, @Lorne-Kates. */
+* {
+	-moz-box-sizing: border-box;
+}
